--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Shaokat",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.13",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
